--- a/10-Ingress-Context-Path-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-Context-Path-Based-Routing.yml
+++ b/10-Ingress-Context-Path-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-Context-Path-Based-Routing.yml
@@ -9,16 +9,25 @@ spec:
   - http:
       paths:
       - path: /app1/
+        pathType: Prefix
         backend:
-          serviceName: app1-nginx-clusterip-service
-          servicePort: 80
+          service:
+            name: app1-nginx-clusterip-service
+            port:
+              number: 80
       - path: /app2/
+        pathType: Prefix
         backend:
-          serviceName: app2-nginx-clusterip-service
-          servicePort: 80          
+          service:
+            name: app2-nginx-clusterip-service
+            port:
+              number: 80          
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: usermgmt-webapp-clusterip-service
-          servicePort: 80          
+          service:
+            name: usermgmt-webapp-clusterip-service
+            port: 
+              number: 80          
 
   
